# order_desk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
data/: review_queue.seed.json
docs/: audit_report.md  corpus_notes.md  frozen_test_fixlog.md  human_slice_guide.md  phase10_milestone.md  phase11_milestone.md  phase4_calibration.md  phase4_calibrator.json  phase4_milestone.md  phase4_service.md  phase5_milestone.md  phase6_milestone.md  phase7_milestone.md  phase8_milestone.md  phase9_milestone.md
scripts/: billing_smoke.py  build_audit_pack.py  build_audit_report.py  build_flywheel_sft.py  build_human_slice.py  build_review_queue.py  build_sft.py  check_regression.py  check_verdicts.py  collect_calibration.py  corpus_stats.py  eval_blended.py  fit_calibrator.py  fulfill_smoke.py  ingest_smoke.py  issue_token.py  materialize_corpus.py  modal_train.py  modal_vllm.py  pack_human_eml.py  pipeline_smoke.py  preview_emails.py  preview_nonorder.py  preview_scenarios.py  reset_review_queue.py  run_baseline.py  run_eval.py  run_route_eval.py  sft_curve.py  write_prompt_snapshots.py  write_schema_snapshot.py
tests/: test_api.py  test_audit.py  test_audit_report.py  test_auth.py  test_baseline.py  test_billing.py  test_blended.py  test_calibration.py  test_catalog.py  test_confidence.py  test_corpus.py  test_corpus_freeze.py  test_corrections.py  test_customer.py  test_erp.py  test_fulfill.py  test_graph.py  test_harness.py  test_human.py  test_ingest.py  test_metering.py  test_modal_script.py  test_nodes.py  test_nonorder.py  test_notify.py  test_openai_client.py  test_org_settings.py  test_policy.py  test_priority.py  test_prompts.py  test_quota.py  (+18 more)
(+135 files in other folders)
