[project]
name = "order-desk"
version = "0.1.0"
description = "Email-to-order AI workflow for logistics: classify, extract, validate, HITL, ERP handoff"
readme = "README.md"
authors = [
    { name = "Keith Ho", email = "75162022+Keith-hoka@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.50.2",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"src/order_desk/api/routes.py" = ["B008"]  # FastAPI Depends() in defaults is idiomatic
"src/order_desk/api/auth.py" = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "modal>=1.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
